# vibr8

./: .gitignore  ADB_ANDROID_PLAN.md  CLAUDE.md  COMPUTER_USE_QUESTIONS.md  Dockerfile.hub  Dockerfile.hub-deps  Dockerfile.hub-lite  Dockerfile.hub-lite-deps  Dockerfile.node  Dockerfile.node-base-deps  Dockerfile.node-gpu  Dockerfile.node-gui  Dockerfile.node-gui-deps  FEATURES.md  INSTALL.md  LICENSE  Makefile  NOTICE  README.md  SECURITY_STABILITY_PLAN.md  TODO.md  competitive-analysis.md  dev-launch.sh  distributed-nodes-architecture.md  install-node.sh  prod-launch.sh  pyproject.toml  requirements-hub.txt  requirements-node-desktop.txt  requirements-node.txt  ring0-events.example.json5
.github/: FUNDING.yml
docs/: claude-cli-version-pin.md  computer-use-agents.md  docker-hub-architecture.md  docker-hub-gaps.md  docker-hub-implementation-plan.md  ec2-deployment.md  hub-node-contract-v1.md  native-client-contract.md  node-vended-ui.md  public-auth-surface.md  remote-node-parity-handoff.md  remote-node-parity.md  second-screen-file-push-optimization.md  voice-pipeline.md  wear-os-plan.md
examples/: README.md
scripts/: repair_stuck_starting.py
server/: ADAPTER_GUIDE.md  AUDIO_HOOKS.md  adb_target.py  adb_utils.py  agent_registry.py  android_registry.py  artifacts.py  audio_track.py  auth.py  auto_namer.py  cli_launcher.py  codex_adapter.py  computer_use_agent.py  desktop_target.py  env_manager.py  eou.py  frame_stream.py  git_utils.py  hermes_adapter.py  input_injector.py  main.py  manage_users.py  mdns_discovery.py  node_registry.py  node_tunnel.py  node_ui_proxy.py  opencode_adapter.py  paths.py  rate_limit.py  ring0.py  ring0_events.py  ring0_mcp.py  ring0_scheduler.py  routes.py  scrcpy_client.py  scrcpy_track.py  screen_capture.py  session_names.py  session_registry.py  session_store.py  (+23 more)
(+126 files in other folders)
