[project]
name = "vibr8"
version = "0.1.0"
description = "Web UI for launching and interacting with Claude Code agents"
requires-python = ">=3.11,<3.13"
dependencies = [
    "aiohttp>=3.9",
    "numpy>=1.24",
    "python-dotenv>=1.0",
    "bcrypt>=4.0",
    "mcp>=1.0",
    "httpx>=0.27",
    "json5>=0.9",
]

[project.optional-dependencies]
voice = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "transformers>=4.46,<5.0",  # 5.x breaks speculative decoding (HF #31987, #34626)
    "scipy>=1.10",
    "onnxruntime>=1.15",
    "huggingface-hub>=0.20",
    "aiortc>=1.9",
]
desktop = [
    "aiortc>=1.9",
    "mss>=10.1.0",
    "pillow>=12.2.0",
]
computer-use = [
    "torch>=2.0",
    "transformers>=4.46,<5.0",  # 5.x breaks speculative decoding (HF #31987, #34626)
    "bitsandbytes>=0.43",
    "accelerate>=0.30",
    "mss>=10.1.0",
    "pillow>=12.2.0",
]
all = [
    "vibr8[voice,desktop,computer-use]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["server/tests"]
